update spring and do some refactorings